--- a/src/_includes/lessons/6.html
+++ b/src/_includes/lessons/6.html
@@ -1,6 +1,6 @@
 <div x-data="{name: ''}">
   <label>Your name</label>
-  <input x-ref="nameInput" type="text" x-model="name">
+  <input type="text" x-model="name" x-ref="nameInput">
   <p>Hi, my name is <span x-text="name || '_______________'"></span>! 👋</p>
   <button @click="$refs.nameInput.focus()">set focus</button>
 </div>
