--- a/src/_includes/lessons/7.html
+++ b/src/_includes/lessons/7.html
@@ -1,5 +1,7 @@
-<div x-data="{name: ''}" x-init="$refs.nameInput.focus()">
+<div 
+  x-data="{name: 'Jess'}" 
+  x-init="$refs.nameInput.focus()">
   <label>Your name</label>
-  <input x-ref="nameInput" type="text" x-model="name">
+  <input type="text" x-model="name" x-ref="nameInput">
   <p>Hi, my name is <span x-text="name || '_______________'"></span>! 👋</p>
 </div>
