--- a/src/_includes/tailwind/tailwind.css
+++ b/src/_includes/tailwind/tailwind.css
@@ -35,7 +35,7 @@ label {
 }
 
 pre {
-  @apply bg-gray-100 text-gray-800 py-2 px-4 text-sm rounded;
+  @apply bg-gray-100 text-gray-800 py-2 px-4 text-sm rounded mt-4;
 }
 
 /* Lesson 1 */
